--- a/css/search-page.css
+++ b/css/search-page.css
@@ -3,7 +3,7 @@
 }
 
 #searchbar{
-  max-width: 1068px;
+  max-width: 100%;
   height: 50px; 
   padding: 0;
   font-size: 28px;
@@ -23,12 +23,11 @@
 
 /* spacing */
 #searchbar {
-  margin-left: 16px;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .search-bar-container{
-  padding-bottom: 8px;
+  padding-bottom: 4px;
   margin-bottom: 40px;
   border-bottom: 1.5px solid black;
 }
