--- a/css/reserve.css
+++ b/css/reserve.css
@@ -49,3 +49,35 @@ form{
 .subhead{
     margin-top: 15%;
 }
+#wholecontainer{
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+#numberOfGuest{
+    padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f2f2f2;
+  color: #333;
+  font-size: 16px;
+  width: 200px;
+}
+#numberOfGuest:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px #007bff;
+}
+#plusandminus{
+    height: 120px;
+    min-width: 380px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+span{
+    width: 100%;
+    text-align: center;
+    font-size: 150%;
+    font-weight: 500;
+}
