--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@
 }
 
 .specials-header {
-  width: 100%;
+  width: 1222px;
   height: 100%;
   object-fit: cover;
 }
@@ -94,7 +94,7 @@
 
 #landing-philosophy {
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 /* recommendation */
