--- a/css/drinks.css
+++ b/css/drinks.css
@@ -4,6 +4,7 @@
   }
   
   .price-1{
+    text-align: center;
     grid-column-start: 3;
     grid-column-end: 4;
   }
@@ -14,6 +15,7 @@
   }
   
   .price-2{
+    text-align: center;
     grid-column-start: 8;
     grid-column-end: 9;
   }
@@ -46,10 +48,3 @@
   padding-bottom: 80px;
 }
 
-.drink-item {
-  margin-bottom: 12px;
-}
-
-.drink-price {
-  margin-bottom: 20px;
-}
