--- a/css/reserve.css
+++ b/css/reserve.css
@@ -55,7 +55,7 @@ form{
 }
 .numberOfGuest{
     width: 100%;
-    background-color: white
+    background-color: white;
     height: 10%;
     text-align: center;
     font-size: 20px;
@@ -71,6 +71,6 @@ form{
 .selectoroption p{
     font-size: 25px;
     font-family: "givonic-semibold";
-    margin-right: 4S0%;
+    margin-right: 40%;
     width: 50%;
 }
