--- a/css/search-page.css
+++ b/css/search-page.css
@@ -5,7 +5,7 @@
 #searchbar{
   max-width: 100%;
   height: 50px; 
-  padding: 0;
+  padding-top: 16px;
   font-size: 28px;
   font-family: "givonic-semibold";
   border: 0;
@@ -17,8 +17,7 @@
 }
 
 .search-bar:focus {
-    outline: none; /* Remove the default focus outline if desired */
-    /* Add additional styles for when the input is focused */
+    outline: none; 
   }
 
 /* spacing */
