--- a/css/reserve.css
+++ b/css/reserve.css
@@ -59,6 +59,7 @@ form{
     height: 10%;
     text-align: center;
     font-size: 20px;
+    padding:10%;
     
 }
 .selectoroption{
@@ -66,11 +67,30 @@ form{
     height: 6vh;
     display: flex;
     align-items:center ;
-    padding: 13%S;
+
 }
 .selectoroption p{
-    font-size: 25px;
+    font-size: 20px;
     font-family: "givonic-semibold";
-    margin-right: 40%;
-    width: 50%;
+    margin-right:20%;
+    width: 100%;
 }
+.redate{
+    width: 10vw;
+    background-color: transparent;
+    font-size: 20px
+}
+#longSelector{
+    height: 10vh;
+    margin-right:20%;
+    width: 100%;
+    background-color: #F8F8F8;
+}
+#longSelector p{
+    font-family: "givonic-semibold";
+    font-size: 20px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+    
