--- a/css/reserve.css
+++ b/css/reserve.css
@@ -73,6 +73,7 @@ form{
     font-size: 20px;
     font-family: "givonic-semibold";
     margin-right:20%;
+    margin-left: 5%;
     width: 100%;
 }
 .redate{
@@ -81,7 +82,7 @@ form{
     font-size: 20px
 }
 #longSelector{
-    height: 10vh;
+    height: 13vh;
     margin-right:20%;
     width: 100%;
     background-color: #F8F8F8;
@@ -91,6 +92,55 @@ form{
     font-size: 20px;
     grid-column-start: 1;
     grid-column-end: 3;
+    height: 50%;
+    width: 120%;
+    margin-left: 20%;
+    margin-top: 10%;
+}
+#reserveTime{
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+.preferTime{
+    margin-right: 10%;
+    border-radius: 10%;
+}
+
+/*grid for 2 */
+#time-grid-1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    transition: transform 0.3s ease-in-out;
+    text-align: center;
+    font-size: 110%;
+}
+  
+#time-grid-2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    transition: transform 0.3s ease-in-out;
+    text-align: center;
+    font-size: 110%;
+}
+  
+#time-grid-3 {
+    grid-column-start: 5;
+    grid-column-end: 7;
+    transition: transform 0.3s ease-in-out;
+    text-align: center;
+    font-size: 110%;
+}
+  
+#time-grid-4 {
+    grid-column-start: 7;
+    grid-column-end: 9;
+    transition: transform 0.3s ease-in-out;
+    text-align: center;
+    font-size: 110%;
+}
+
+.check{
+    margin-bottom: 10%;
 }
 
     
