--- a/css/max-width-1221.css
+++ b/css/max-width-1221.css
@@ -134,6 +134,7 @@ bottom: 25%;
 
 .map {
   width: 768px;
+  height: 35vh;
     }
   
 /***************************************************************************************************/
