--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -23,7 +23,10 @@ body.confirmation-page {
     padding: -8px;
     margin: 0;
     text-align: center;
+    font-family: "givonic-semibold"
 }
+
+
 
 #reservation-date,
 #reservation-time,
